# snapflow-stripe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: snapflow-stripe.yml
dags_stripe/: __init__.py
dags_stripe/pipes/: extract_stripe_charges.py
dags_stripe/schemas/: stripe_charge.yml
snapflow_stripe/: __init__.py
snapflow_stripe/functions/: clean_charges.py  import_charges.py  import_invoices.py  import_refunds.py  import_subscription_items.py  import_subscriptions.py
snapflow_stripe/pipes/: clean_charges.py  extract_charges.py  extract_stripe_charges.py
snapflow_stripe/schemas/: stripe_charge.yml  stripe_charge_raw.yml  stripe_invoice_raw.yml  stripe_refund_raw.yml  stripe_subscription_item_raw.yml  stripe_subscription_raw.yml
snapflow_stripe/snaps/: clean_charges.py  extract_charges.py  import_charges.py
tests/: test_stripe.py
