[tool.poetry]
authors = ["Ken Van Haren <kenvanharen@gmail.com>"]
description = "Dags module for Stripe"
license = "BSD-3-Clause"
name = "dags-stripe"
version = "0.1.0"

[tool.poetry.dependencies]
dags = "^0.1"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
